Fix: set body overflow-x: hidden to rem scrollbar

--- a/style.css
+++ b/style.css
@@ -966,6 +966,10 @@
     box-sizing: border-box;
   }
 
+  body {
+    overflow-x: hidden;
+  }
+
   .header {
     width: 100vw;
   }
